<resources>
    <string name="app_name">Calculadora</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="punto">.</string>
    <string name="porcentaje">%</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">x</string>
    <string name="div">/</string>
    <string name="erase">|x|</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="potencia">^</string>
    <string name="fill">Maximum numbers of integers (15)</string>

</resources>
